# databend-sqllogictests

./: Cargo.toml  LICENSE  plan.md  rust-toolchain.toml
src/: arg.rs  diagnostics.rs  error.rs  lib.rs  main.rs  report.rs  runner.rs  util.rs
src/client/: mod.rs
