[package]
name = "databend-sqllogictests-core"
version = "0.1.0"
edition = "2024"
categories = ["command-line-utilities", "development-tools::build-utils"]
description = "Databend-Sqllogictests is a testing tool to verify the correctness of Databend."
keywords = ["sqllogictest"]
license = "Apache-2.0"

[lib]
name = "databend_sqllogictests_core"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
bollard = "0.17"
clap = { version = "4.4.2", features = ["derive"] }
cookie = "0.18.1"
env_logger = "0.11"
flate2 = { version = "1.1.8", features = ["zlib-rs"] }
futures-util = "0.3.24"
mysql_async = { version = "0.34", default-features = false, features = [
  "native-tls-tls",
] }
rand = { version = "0.8.5", features = ["small_rng"] }
redis = { version = "0.27.5", features = ["tokio-comp", "connection-manager"] }
regex = "1.8.1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
  "native-tls-vendored",
  "native-tls-alpn",
  "cookies",
] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.85", default-features = false, features = [
  "preserve_order",
  "unbounded_depth",
] }
sqllogictest = "0.29.1"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11.5", features = ["mysql", "redis"] }
thiserror = "1"
tokio = { version = "1.35.0", features = ["full"] }
url = "2.5.8"
walkdir = "2.3.2"
